Add Apache user to reduce permission errors with mounted host volumes

--- a/7.2/debian/stretch/apache-xdebug/default/Dockerfile
+++ b/7.2/debian/stretch/apache-xdebug/default/Dockerfile
@@ -3,11 +3,20 @@ FROM nicoherbigio/php:7.2.14-apache-xdebug
 LABEL maintainer="Nico Herbig <nico@nicoherbig.io>"
 
 
+# Add additional Apache user and add them to the Apache group (www-data) to ensure that the ID (UID)
+# is consistently assigned regardless of which additional dependencies are added.
+
+ENV WWW_USER_ID=10033 WWW_USER=www-user
+ENV WWW_GROUP_ID=33 WWW_GROUP=www-data
+
+RUN useradd --gid ${WWW_GROUP} --uid ${WWW_USER_ID} --create-home --shell /bin/bash ${WWW_USER}
+
+
 # Install additional required software packages for TYPO3 CMS.
 
 RUN set -ex \
     && apt-get update \
-    && apt-get install -y --no-install-recommends wget libfreetype6-dev libjpeg62-turbo-dev libmcrypt-dev libpng-dev libxml2-dev zlib1g-dev libldap2-dev ghostscript graphicsmagick \
+    && apt-get install -y --no-install-recommends git libfreetype6-dev libjpeg62-turbo-dev libmcrypt-dev libpng-dev libxml2-dev zlib1g-dev libldap2-dev ghostscript graphicsmagick unzip wget \
     && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
     && docker-php-ext-install -j$(nproc) exif gd intl ldap mysqli opcache soap zip \
     && pecl install apcu-5.1.12 \
