--- a/7.2/debian/stretch/apache/default/Dockerfile
+++ b/7.2/debian/stretch/apache/default/Dockerfile
@@ -16,12 +16,12 @@ RUN useradd --gid ${WWW_GROUP} --uid ${WWW_USER_ID} --create-home --shell /bin/b
 
 RUN set -ex \
     && apt-get update \
-    && apt-get install -y --no-install-recommends git libfreetype6-dev libjpeg62-turbo-dev libmcrypt-dev libpng-dev libxml2-dev zlib1g-dev libldap2-dev ghostscript graphicsmagick unzip wget \
+    && apt-get install -y --no-install-recommends git libfreetype6-dev libjpeg62-turbo-dev libmcrypt-dev libpng-dev libxml2-dev libzip-dev libldap2-dev ghostscript graphicsmagick unzip wget \
     && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
     && docker-php-ext-install -j$(nproc) exif gd intl ldap mysqli opcache soap zip \
     && pecl install apcu-5.1.17 \
     && docker-php-ext-enable apcu \
-    && apt-get remove -y libfreetype6-dev libjpeg62-turbo-dev libmcrypt-dev libpng-dev libxml2-dev zlib1g-dev \
+    && apt-get remove -y libfreetype6-dev libjpeg62-turbo-dev libmcrypt-dev libpng-dev libxml2-dev libzip-dev \
     && rm -rf /var/lib/apt/lists/*
 
 
