--- a/7.4/debian/apache/default/Dockerfile
+++ b/7.4/debian/apache/default/Dockerfile
@@ -1,4 +1,4 @@
-FROM nicoherbigde/php:7.4.27-apache
+FROM php:7.4.27-apache-bullseye
 
 LABEL maintainer="Nico Herbig <nico@nicoherbig.io>"
 
@@ -10,6 +10,37 @@ ENV WWW_USER_ID=10033 WWW_USER=www-user
 ENV WWW_GROUP_ID=33 WWW_GROUP=www-data
 
 RUN useradd --gid ${WWW_GROUP} --uid ${WWW_USER_ID} --create-home --shell /bin/bash ${WWW_USER}
+
+
+# Set time zone to "Europe/Berlin".
+
+ENV TZ=Europe/Berlin
+
+RUN set -ex \
+    && ln -fns /usr/share/zoneinfo/${TZ} /etc/localtime \
+    && echo ${TZ} > /etc/timezone \
+    && { \
+        echo 'date.timezone = ${TZ}'; \
+       } | tee /usr/local/etc/php/conf.d/docker-php-timezone.ini
+
+
+# Set locale to "de_DE.UTF-8".
+
+RUN set -ex \
+    && if [ -f /etc/dpkg/dpkg.cfg.d/docker ]; then \
+            # If this file exists, we are likely in "debian:xxx-slim" and locales are thus being excluded
+            # so we need to remove that exclusion (since we need locales).
+            grep -q '/usr/share/locale' /etc/dpkg/dpkg.cfg.d/docker; \
+            sed -ri '/\/usr\/share\/locale/d' /etc/dpkg/dpkg.cfg.d/docker; \
+            ! grep -q '/usr/share/locale' /etc/dpkg/dpkg.cfg.d/docker; \
+       fi \
+    && apt-get update \
+    && apt-get install -y --no-install-recommends locales \
+    && rm -rf /var/lib/apt/lists/* \
+    && localedef -i de_DE -c -f UTF-8 -A /usr/share/locale/locale.alias de_DE.UTF-8 \
+    && localedef -i en_US -c -f UTF-8 -A /usr/share/locale/locale.alias en_US.UTF-8
+
+ENV LANG=en_US.UTF-8 LANGUAGE=en_US:en
 
 
 # Install additional required software packages for TYPO3 CMS.
@@ -25,10 +56,21 @@ RUN set -ex \
     && rm -rf /var/lib/apt/lists/*
 
 
-# Reconfigure Apache and PHP for TYPO3 CMS.
+# Configure Apache and PHP for TYPO3 CMS.
+#   - activate required Apache modules for TYPO3 CMS
+#   - switch Apache server signature off
+#   - make Apache document root configureable by environment variable
+#   - use PHP production settings as default
+#   - reconfigure PHP settings for TYPO3 CMS
+
+ENV APACHE_DOCUMENT_ROOT=/app/public
 
 RUN set -ex \
     && a2enmod expires deflate headers rewrite \
+    && sed -i -e '/ServerTokens/s/OS/Prod/g' -e '/ServerSignature/s/On/Off/g' /etc/apache2/conf-available/security.conf \
+    && sed -ri -e 's!/var/www/html!${APACHE_DOCUMENT_ROOT}!g' /etc/apache2/sites-available/*.conf \
+    && sed -ri -e 's!/var/www/!${APACHE_DOCUMENT_ROOT}!g' /etc/apache2/apache2.conf /etc/apache2/conf-available/*.conf \
+    && cp ${PHP_INI_DIR}/php.ini-production ${PHP_INI_DIR}/php.ini \
     && { \
         echo 'max_execution_time = 240'; \
         echo 'max_input_vars = 1500'; \
@@ -36,3 +78,6 @@ RUN set -ex \
         echo 'post_max_size = 32M'; \
         echo 'upload_max_filesize = 32M'; \
        } | tee /usr/local/etc/php/conf.d/docker-typo3-cms.ini
+
+
+WORKDIR ${APACHE_DOCUMENT_ROOT}
